--- a/todo.css
+++ b/todo.css
@@ -43,26 +43,33 @@
             width: 100%;
             /*display: inline-block;  */
             float: right;          
-            margin-top: 2px;
-            margin-bottom: 24px;
-            height: 42px;
-            background-color: lightgrey;
-            border: 1px solid #585858;
+            margin-top: 0px;
+            margin-bottom: 20px;
+            height: 45px;
+            background-color: #f0f0f0;
+            /*border: 2px solid #80a3d7;*/
+            border-left: 0px solid #80a3d7;
+            border-top: 0px solid #80a3d7;
+            border-bottom: 2px solid #80a3d7;
+            border-right: 0px solid #80a3d7;
         }
 
         .colorSlider div {
             float: left;
             height: 100%;            
             width: 10%;
+            text-align: center;            
             padding-top: 10px;
+            padding-left: 10px;
         /*    padding-left: 40px;
             padding-top: 0px;
             padding-bottom: 20px;
             margin-left: 2px;*/            
         }
 
-        .colorSlider .coltitle {
-            text-align: center;            
+        .colorSlider div i {   
+            color: slateblue;         
+            vertical-align: middle;
         }
 
         .form .txtinput {
@@ -82,7 +89,7 @@
             display: flex;
             text-align: center;
             font-weight: bold;
-            color: ;
+            
 			width: 8%;
             border: 2px solid #9d9d9d;
             color: darkslategray;
