--- a/todo.css
+++ b/todo.css
@@ -173,6 +173,7 @@
             width: 20%;
             background-color: #c3c3c3;
             border: 3px solid #c3c3c3;
+            border-radius: 4px;
             color: #000000;
             padding: 5px;
             text-align: center;
